# sa_xai_esc-50

./: .gitignore  pyproject.toml
notebooks/: 01_eda.ipynb  02_feature_extraction.ipynb  03_svm.ipynb  05_ConvNeXtTiny.ipynb
outputs/reports/: classification_report_svm_fold4.csv  classification_report_svm_fold5.csv
