[project]
name = "sygnaly-akustyczne-projekt-xai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "captum>=0.9.0",
    "datasets>=4.8.5",
    "grad-cam>=1.5.5",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyprojroot>=0.3.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.9.0",
    "transformers-interpret>=0.10.0",
]
